# tests_with_cpp_sockets

./: .gitignore  CMakeLists.txt  client  server
include/: ASocket.hpp  Client.hpp  INETSocket.hpp  InputSocket.hh  OutputSocket.hh  Server.hpp  Sockets.hpp  StandardSerializer.hh  UNIXSocket.hpp
src/: Client.cpp  INETSocket.cpp  Server.cpp  UNIXSocket.cpp
src/example/: test.cpp
src/examples/: client.cpp  clientTest.cpp  server.cpp  serverTest.cpp
